--- a/src/style.css
+++ b/src/style.css
@@ -8,5 +8,10 @@
 */
 
 footer {
-    width: 100vw;
+  width: 100vw;
+}
+
+.idezet {
+  font-family: "Times New Roman", Times, serif;
+  font-size: 1.1em;
 }
